# superopt

./: .gitignore  CLAUDE.md  DECISION_LOG.md  PLAN.md  README.md  SCHEDULE.md  TIMELINE.md  mkdocs.yml  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-end.sh  session-start.sh
docs/: explainer.md  references.md
docs/notes/: index.md
docs/notes/encodings/: shifts.md
docs/notes/javascripts/: mathjax.js
docs/notes/papers/: jha-2010.md
docs/notes/theory/: 00-superoptimization.md  01-smt-and-bitvectors.md  02-equivalence-via-unsat.md  03-synthesis-and-constants.md  04-cegis.md  05-optimality.md  index.md
superopt/: cegis.py  encode.py  equiv.py  fuzz.py  interp.py  ir.py  search.py  synth.py
superopt/benchmarks/: __init__.py  abs_val.py  isolate_rmb.py  popcount.py
tests/: test_cegis.py  test_encode_sketch.py  test_encoder_vs_interp.py  test_equiv.py  test_fuzz.py  test_interp.py  test_ir.py  test_search.py  test_synth.py
