[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "superopt"
version = "0.0.0"
description = "A provably-optimal superoptimizer for short, loop-free integer/bitwise routines."
requires-python = ">=3.11"
dependencies = ["z3-solver"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["superopt*"]

[tool.setuptools.package-data]
superopt = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: long-running synthesis at the frontier, deselected by default"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
